--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 Django==2.2.4
-pip==19.0.3
+django-summernote==0.8.11.4
+gunicorn==19.9.0
+Pillow==6.1.0
 pytz==2019.2
 six==1.12.0
 sqlparse==0.3.0
 transliterate==1.10.2
-Pillow==6.1.0
-django_summernote==0.8.11.4
