--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,27 @@
+asn1crypto==0.24.0
+boto3==1.9.233
+botocore==1.12.233
+certifi==2019.9.11
+cfe==0.0.15
+cffi==1.12.3
+chardet==3.0.4
+cryptography==2.7
 Django==2.2.4
+django-s3direct==1.1.5
+django-storages==1.7.2
 django-summernote==0.8.11.4
+djangorestframework==3.10.3
+docutils==0.15.2
 gunicorn==19.9.0
+idna==2.8
+jmespath==0.9.4
 Pillow==6.1.0
+pycparser==2.19
+python-dateutil==2.8.0
 pytz==2019.2
+requests==2.22.0
+s3transfer==0.2.1
 six==1.12.0
 sqlparse==0.3.0
 transliterate==1.10.2
+urllib3==1.25.5
