--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ cfe==0.0.15
 cffi==1.12.3
 chardet==3.0.4
 cryptography==2.7
+dj-database-url==0.5.0
 Django==2.2.4
+django-heroku==0.3.1
 django-s3direct==1.1.5
 django-storages==1.7.2
 django-summernote==0.8.11.4
@@ -16,6 +18,7 @@ gunicorn==19.9.0
 idna==2.8
 jmespath==0.9.4
 Pillow==6.1.0
+psycopg2==2.8.3
 pycparser==2.19
 python-dateutil==2.8.0
 pytz==2019.2
@@ -25,3 +28,4 @@ six==1.12.0
 sqlparse==0.3.0
 transliterate==1.10.2
 urllib3==1.25.5
+whitenoise==4.1.4
