--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+asgiref==3.2.3
 asn1crypto==0.24.0
 boto3==1.9.233
 botocore==1.12.233
@@ -7,7 +8,7 @@ cffi==1.12.3
 chardet==3.0.4
 cryptography==2.7
 dj-database-url==0.5.0
-Django==2.2.4
+Django==3.0.2
 django-heroku==0.3.1
 django-s3direct==1.1.5
 django-storages==1.7.2
@@ -17,7 +18,7 @@ docutils==0.15.2
 gunicorn==19.9.0
 idna==2.8
 jmespath==0.9.4
-Pillow==6.2.0
+Pillow==6.1.0
 psycopg2==2.8.3
 pycparser==2.19
 python-dateutil==2.8.0
@@ -29,3 +30,4 @@ sqlparse==0.3.0
 transliterate==1.10.2
 urllib3==1.25.5
 whitenoise==4.1.4
+
