--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,34 @@
+appdirs==1.4.3
 asgiref==3.2.3
-asn1crypto==0.24.0
-boto3==1.9.233
-botocore==1.12.233
-certifi==2019.9.11
+asn1crypto==1.3.0
+boto3==1.12.16
+botocore==1.15.16
+certifi==2019.11.28
 cfe==0.0.15
-cffi==1.12.3
+cffi==1.14.0
 chardet==3.0.4
-cryptography==2.7
 dj-database-url==0.5.0
-Django==3.0.2
+Django==3.0.4
 django-heroku==0.3.1
 django-s3direct==1.1.5
-django-storages==1.7.2
-django-summernote==0.8.11.4
-djangorestframework==3.10.3
-docutils==0.15.2
-gunicorn==19.9.0
-idna==2.8
-jmespath==0.9.4
-Pillow==7.0.0
-psycopg2==2.8.3
-pycparser==2.19
-python-dateutil==2.8.0
-pytz==2019.2
-requests==2.22.0
-s3transfer==0.2.1
-six==1.12.0
-sqlparse==0.3.0
-transliterate==1.10.2
-urllib3==1.25.5
-whitenoise==4.1.4
-
+django-storages==1.9.1
+django-summernote==0.8.11.6
+djangorestframework==3.11.0
+docutils==0.16
+gunicorn==20.0.4
+idna==2.9
+jmespath==0.9.5
+packaging==20.3
+pip-review==1.0
+pipdate==0.4.1
+psycopg2==2.8.4
+pycparser==2.20
+pyparsing==2.4.6
+python-dateutil==2.8.1
+pytz==2019.3
+requests==2.23.0
+s3transfer==0.3.3
+six==1.14.0
+sqlparse==0.3.1
+urllib3==1.25.8
+whitenoise==5.0.1
