--- a/requirements.txt
+++ b/requirements.txt
@@ -25,11 +25,13 @@ psycopg2==2.8.4
 pycparser==2.20
 pyparsing==2.4.6
 python-dateutil==2.8.1
+pytube3==9.6.4
 pytz==2019.3
 requests==2.23.0
 s3transfer==0.3.3
 six==1.14.0
 sqlparse==0.3.1
 transliterate==1.10.2
+typing-extensions==3.7.4.1
 urllib3==1.25.8
 whitenoise==5.0.1
