--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,39 @@
-appdirs==1.4.3
+appdirs==1.4.4
 asgiref==3.2.7
 asn1crypto==1.3.0
-boto3==1.12.28
-botocore==1.15.28
-certifi==2019.11.28
+boto3==1.14.1
+botocore==1.17.1
+certifi==2020.4.5.2
 cfe==0.0.15
 cffi==1.14.0
 chardet==3.0.4
 dj-database-url==0.5.0
-Django==3.0.4
+Django==3.0.7
 django-heroku==0.3.1
 django-s3direct==1.1.5
 django-storages==1.9.1
 django-summernote==0.8.11.6
 djangorestframework==3.11.0
-docutils==0.15.2
+docutils==0.16
 gunicorn==20.0.4
 idna==2.9
-jmespath==0.9.5
-packaging==20.3
+importlib-metadata==1.6.1
+jmespath==0.10.0
+packaging==20.4
 pip-review==1.1.0
-pipdate==0.4.1
-psycopg2==2.8.4
+pipdate==0.5.1
+psycopg2==2.8.5
 pycparser==2.20
-pyparsing==2.4.6
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytube3==9.6.4
-pytz==2019.3
+pytz==2020.1
 requests==2.23.0
 s3transfer==0.3.3
-six==1.14.0
+six==1.15.0
 sqlparse==0.3.1
 transliterate==1.10.2
-typing-extensions==3.7.4.1
-urllib3==1.25.8
-whitenoise==5.0.1
+typing-extensions==3.7.4.2
+urllib3==1.25.9
+whitenoise==5.1.0
+zipp==3.1.0
